@@ -103,6 +103,12 @@ DESCRIPTION
         $dbh = DBI->connect("DBI:CSV:");
         $dbh = DBI->connect("DBI:CSV:f_dir=.");
 
+    (I was told, that VMS requires
+
+        $dbh = DBI->connect("DBI:CSV:f_dir=");
+
+    for whatever reasons.)
+
     You may set other attributes in the DSN string, separated by
     semicolons.
 
