@@ -1,3 +1,12 @@
+2002-12-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1030)
+
+        * lib/DBD/File.pm: Locking is now suppressed under
+          VMS. David Webb <d.webb@mdx.ac.uk>
+        * lib/DBD/CSV.pm: Added a hint to the docs, that
+          "f_dir=" is required for the current directory
+          on VMS and not "f_dir=.". David Webb
+          <d.webb@mdx.ac.uk>
+
 2001-11-28  Jochen Wiedmann  <joe@ispsoft.de> (0.1029)
 
 	* lib/DBD/CSV.pm (fetch_row): A numeric value
